@@ -1,5 +1,9 @@
 2008.06.21 oubiwann
 
+* Cleaned up a listener import.
+* Cleaned up formatting in listener.
+* Removed reactor.run() call in listener.
+* Minor scheduler tweaks.
 * Updated TODO.
 * Removed old, unused publisher (we're using Twisted to publish data to the
 web).
